--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,44 @@
 <div class="page__content">
   <header class="header page__section">
     <img src="<%=require('./images/logo.svg')%>" 
-    alt="Логотип проекта масто" 
+    alt="Логотип проекта место" 
     class="logo header__logo">
   </header>
   <main class="content">
     <section class="profile page__section">
+      <div class="profile__image-wrapper">
     <div 
       class="profile__image" 
-      style="background-image: url('<%=require('./images/avatar.jpg')%>')">
-    </div>
+      style="background-image: url('<%=require('./images/avatar.jpg')%>')"
+      ></div>
+      <div class="profile__overlay"></div>
+
+       <button
+              class="profile__edit-avatar-button"
+              aria-label="Редактировать аватар"
+            >
+              <svg
+                width="26"
+                height="26"
+                viewBox="0 0 10 10"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"
+                  fill="white"
+                />
+              </svg>
+            </button>
+          </div>
+
+
       <div class="profile__info">
         <h1 class="profile__title">Бо Синн</h1>
         <button class="profile__edit-button" type="button"></button>
         <p class="profile__description">Злодей</p>
       </div>
+
       <button class="profile__add-button" type="button"></button>
     </section>
     <section class="places page__section">
@@ -39,28 +63,84 @@
       © 2025 Mesto Russia
     </p>
   </footer>
+
+
   <div class="popup popup_is-animated popup_type_edit">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
-        <button type="submit" class="button popup__button">Сохранить</button>
+                    <input
+              id="name-input"
+              type="text"
+              name="name"
+              class="popup__input popup__input_type_name"
+              placeholder="Имя"
+              required
+              minlength="2"
+              maxlength="40"
+              pattern="^[A-Za-zА-Яа-яЁё\- ]+$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+            />
+            <span class="popup__error name-error"></span>
+
+                        <input
+              id="description-input"
+              type="text"
+              name="description"
+              class="popup__input popup__input_type_description"
+              placeholder="Занятие"
+              required
+              minlength="2"
+              maxlength="200"
+              pattern="^[A-Za-zА-Яа-яЁё\- ]+$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+            />
+            <span class="popup__error description-error"></span>
+
+        <button id="save-button" type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
   </div>
+
+
   <div class="popup popup_is-animated popup_type_new-card">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-card">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
-        <button type="submit" class="button popup__button">Сохранить</button>
+        <input
+              id="place-name-input"
+              type="text"
+              name="place-name"
+              class="popup__input popup__input_type_card-name"
+              placeholder="Название"
+              required
+              minlength="2"
+              maxlength="30"
+              pattern="^[A-Za-zА-Яа-яЁё\- ]+$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+            />
+            <span class="popup__error place-name-error"></span>
+
+            <input
+              id="link-input"
+              type="url"
+              name="link"
+              class="popup__input popup__input_type_url"
+              placeholder="Ссылка на картинку"
+              required
+              data-error-message="Введите правильный URL"
+            />
+            <span class="popup__error link-error"></span>
+
+            <button id="save-button" type="submit" class="button popup__button">
+              Сохранить
+            </button>
       </form>
     </div>
   </div>
+
   <div class="popup popup_is-animated popup_type_image">
     <div class="popup__content popup__content_content_image">
       <button type="button" class="popup__close"></button>
@@ -77,9 +157,40 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
+      <div class="card__like-container"></div>
       <button type="button" class="card__like-button"></button>
+      <span class="card__like-count">0</span>
+    </div>
     </div>
   </li>
 </template>
+<div class="popup popup_is-animated popup_type_delete">
+      <div class="popup__content">
+        <button class="popup__close"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <button class="popup__button popup__button_type_delete">Да</button>
+      </div>
+    </div>
+
+    <div class="popup popup_is-animated popup_type_avatar">
+      <div class="popup__content">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form popup__form_avatar" name="avatarForm">
+          <input
+            type="url"
+            name="avatar"
+            class="popup__input popup__input_type_url"
+            placeholder="Ссылка на новый аватар"
+            required
+            data-error-message="Введите правильный URL"
+          />
+          <span class="popup__error avatar-error"></span>
+               <button id="save-button" type="submit" class="button popup__button">
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>     
 </body>
 </html>
