--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
   </footer>
 
 
-  <div class="popup popup_is-animated popup_type_edit">
+  <div class="popup popup_type_edit">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
@@ -104,7 +104,7 @@
   </div>
 
 
-  <div class="popup popup_is-animated popup_type_new-card">
+  <div class="popup popup_type_new-card">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
@@ -141,7 +141,7 @@
     </div>
   </div>
 
-  <div class="popup popup_is-animated popup_type_image">
+  <div class="popup popup_type_image">
     <div class="popup__content popup__content_content_image">
       <button type="button" class="popup__close"></button>
       <img src="" alt="" class="popup__image">
@@ -164,7 +164,7 @@
     </div>
   </li>
 </template>
-<div class="popup popup_is-animated popup_type_delete">
+<div class="popup popup_type_delete">
       <div class="popup__content">
         <button class="popup__close"></button>
         <h2 class="popup__title">Вы уверены?</h2>
@@ -172,7 +172,7 @@
       </div>
     </div>
 
-    <div class="popup popup_is-animated popup_type_avatar">
+    <div class="popup popup_type_avatar">
       <div class="popup__content">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Обновить аватар</h3>
